# slopstopper

./: .gitignore  .markdownlint.json  .slopstopper.yml  .slopstopper.yml.example  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.ss.yml  Taskfile.yml  install-skill.sh  install.sh  mise.toml  netlify.toml  package-lock.json  package.json  playwright.config.js  release-please-config.json  server.js  tsconfig.json  validation.js  wrangler.jsonc
.claude/skills/install-slopstopper/: SKILL.md
.claude/skills/slopstopper-install/: SKILL.md
.claude/skills/slopstopper-triage/: SKILL.md
.claude/skills/slopstopper-update/: SKILL.md
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: config.yaml  support-request.yml
.github/aw/: actions-lock.json
.github/workflows/: ci-cli.yml  copilot-setup-steps.yml  drift-detection.yml  hygiene-doc-updater.md  release-please.yml  reliability-broken-links-check.yml  ss-hygiene-auto-label-pr.yml  ss-hygiene-cli-tests-check.yml  ss-hygiene-complexity-check.yml  ss-hygiene-csp-exceptions-check.yml  ss-hygiene-doc-updater.lock.yml  ss-hygiene-doc-updater.md  ss-hygiene-docs-accuracy-check.yml  ss-hygiene-docs-front-matter-check.yml  ss-hygiene-docs-size-check.yml  ss-hygiene-docs-structure-check.yml  ss-hygiene-entry-files-check.yml  ss-netlify-cleanup-preview.yml  ss-netlify-deploy.yml  ss-playwright-tests.yml  ss-release.yml  ss-reliability-accessibility-check.yml  ss-reliability-broken-links-check.yml  ss-reliability-core-web-vitals.yml  ss-reliability-seo-check.yml  ss-reliability-smoke-tests.yml  ss-security-dast-check.yml  ss-security-sast-check.yml  ss-security-secrets-check.yml  ss-security-vulnerability-all-check.yml  ss-security-vulnerability-new-check.yml  ss-workflow-failure-issue.yml
.lighthouseci/: lhr-1780639842379.html  lhr-1780639842379.json  lhr-1780639853565.html  lhr-1780639853565.json  lhr-1780639864267.html  lhr-1780639864267.json
.ss/: lighthouserc.json  lighthouserc.prod.json  playwright.config.js  server.js
.ss/scripts/: check-csp-exceptions.py  check-dast-alerts.py  check-docs-accuracy.py  check-docs-front-matter.py  check-docs-size.sh  check-docs-structure.py  check-entry-file-size.py  check-seo-metatags.py  discover-pages.py  generate-complexity-md.py  generate-dast-md.py  generate-dependencies-md.py  generate-docs-accuracy-md.py  generate-docs-front-matter-md.py  generate-docs-size-report.py  generate-docs-structure-md.py  generate-sast-md.py  generate-secrets-md.py  load_config.py  render-static-assets.js
.ss/scripts/headers_adapters/: __init__.py  cloudflare_adapter.py  json_adapter.py
.ss/tests/: accessibility.spec.ts  broken-links.spec.ts  check_csp_exceptions.test.py  check_seo_metatags.test.py  discover_pages.test.py  drift-detection.spec.js  generate_complexity_report.test.py  generate_dast_report.test.py  generate_dependencies_report.test.py  generate_sast_report.test.py  generate_secrets_report.test.py  smoke.spec.ts
app/: _headers  _redirects  copy.js  features.css  features.html  feedback.css  feedback.html  index.css  index.html  manifest.webmanifest  robots.txt  shared.css  sitemap.xml  tools.css  tools.html
cli/: LICENSE  README.md  Taskfile.yml  pyproject.toml
cli/.task/checksum/: install
cli/slopstopper/: __init__.py  __main__.py  badges.py  cli.py  config.py  dast_gate.py  discovery.py  emit.py  output.py  templates.py
cli/slopstopper/checks/: __init__.py  accessibility.py  broken_links.py  complexity.py  csp_exceptions.py  cwv.py  dast.py  dependencies.py  docs_accuracy.py  docs_size.py  docs_structure.py  entry_files.py  sast.py  secrets.py  seo.py  smoke.py  vulnerability_all.py
cli/slopstopper/data/: lighthouserc.json  server.js
cli/slopstopper/data/templates/entry-files/: AGENTS.md  README.md
cli/slopstopper/data/templates/entry-files/docs/: index.md
cli/slopstopper/data/tests/: accessibility.spec.ts
cli/slopstopper/headers_adapters/: __init__.py  cloudflare_adapter.py  json_adapter.py
cli/tests/: conftest.py  test_badges.py  test_cli.py  test_config.py  test_dast_gate.py  test_discovery.py  test_emit.py  test_headers_adapters.py  test_install.py  test_output.py  test_server_js.py  test_templates.py
cli/tests/checks/: test_accessibility.py  test_broken_links.py  test_complexity.py  test_csp_exceptions.py  test_cwv.py  test_dast.py  test_dependencies.py  test_docs_accuracy.py  test_docs_size.py  test_docs_structure.py  test_entry_files.py  test_sast.py  test_secrets.py  test_seo.py  test_smoke.py  test_vulnerability_all.py
docs/: AGENTS.md  CONTRIBUTING.md  README.md  index.md
docs/app/: README.md
docs/architecture/: README.md
docs/contributing/: PITFALLS.md  README.md
docs/decisions/: README.md
docs/deployment/: README.md
docs/hygiene/: COMPLEXITY_CONFIG.md  DOCS_SIZE_MONITORING.md  DOC_UPDATER.md  README.md
docs/reliability/: ACCESSIBILITY.md  DRIFT_DETECTION.md  README.md  SEO.md
docs/runbooks/: INSTALL_SKILL.md  INSTALL_SKILLS.md  README.md  RELEASE.md  UPGRADE_CLI.md  adoption-metrics.md
docs/security/: CSP_EXCEPTIONS.md  README.md
docs/support/: README.md  SUPPORT.md
src/: tools.ts
templates/: _headers.example  gitignore.block  labeler.yml.example  slopstopper.yml.example  zap-rules.tsv.example
tests/: accessibility.spec.ts  broken-links.spec.ts  generate_complexity_report.test.py
worker/: headers.json  index.ts
