[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopstopper-cli"
version = "0.2.0"
description = "Portable code-quality suite — security, hygiene, reliability."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Richard Griffiths" }]
keywords = [
  "ci",
  "quality",
  "checks",
  "linting",
  "security",
  "accessibility",
  "lighthouse",
  "playwright",
  "slopstopper",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Security",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7",
  # `lizard` is invoked at runtime by hygiene:complexity via subprocess
  # (`python -m lizard`). Not a runtime dep of slopstopper-cli itself —
  # adopters install it themselves in production. Pulled into the test
  # extra so CI parity + integration tests can exercise the real tool.
  "lizard>=1.17",
]

[project.scripts]
slopstopper = "slopstopper.cli:main"

[project.urls]
Homepage = "https://slopstopper.dev"
Source = "https://github.com/hungovercoders/slopstopper"
Issues = "https://github.com/hungovercoders/slopstopper/issues"
Documentation = "https://slopstopper.dev"

[tool.hatch.build.targets.wheel]
packages = ["slopstopper"]

# Bundle Playwright specs + configs and the Lighthouse CI config inside
# the wheel. The reliability checks resolve to these by default; an
# adopter can still override by writing the same-named file under .ss/.
[tool.hatch.build.targets.wheel.force-include]
"slopstopper/data" = "slopstopper/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
