[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopstopper-cli"
version = "0.8.0"
description = "Portable code-quality suite — security, hygiene, reliability."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Richard Griffiths" }]
maintainers = [{ name = "Richard Griffiths", email = "griff182uk@googlemail.com" }]
keywords = [
  "ci",
  "quality",
  "checks",
  "linting",
  "security",
  "accessibility",
  "lighthouse",
  "playwright",
  "slopstopper",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Security",
  "Topic :: System :: Software Distribution",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
]
dependencies = [
  # `lizard` is invoked at runtime by hygiene:complexity via subprocess
  # (`python -m lizard` against sys.executable). When slopstopper-cli is
  # installed via pipx, sys.executable resolves to the pipx venv — which
  # is where lizard must live too, otherwise `python -m lizard` fails
  # even though `brew install lizard` (a different `lz4` tool) is on PATH.
  # Promoting lizard from a test extra to a runtime dependency means
  # pipx installs it into the same venv and the check works out of the box.
  "lizard>=1.17",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]

[project.scripts]
slopstopper = "slopstopper.cli:main"

[project.urls]
Homepage = "https://slopstopper.dev"
Source = "https://github.com/hungovercoders/slopstopper"
Issues = "https://github.com/hungovercoders/slopstopper/issues"
Documentation = "https://slopstopper.dev"
Changelog = "https://github.com/hungovercoders/slopstopper/blob/main/CHANGELOG.md"
Acknowledgements = "https://github.com/hungovercoders/slopstopper/blob/main/ATTRIBUTIONS.md"

[tool.hatch.build.targets.wheel]
# `packages = ["slopstopper"]` includes the slopstopper/ tree (Python +
# data files) automatically — no `force-include` needed; that block
# caused a double-include error when building the wheel under hatchling.
packages = ["slopstopper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
